--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@files-ui/react": "^1.1.0",
     "axios": "^1.6.3",
     "firebase": "^10.7.0",
     "react": "^18.2.0",
