--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
+    "react-s3": "^1.3.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
